# python-static-site-generator

./: pyproject.toml  ssg.py
ssg/: content.py  parsers.py  site.py
