[tool.poetry]
name = "ssg"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.6"
docutils = "==0.16"
markdown = "==3.1.1"
parso = "==0.6.0"
pytest = "==5.3.5"
pytest-json-report = "==1.2.1"
pytest-metadata = "==1.8.0"
pytest-sugar = "==0.9.2"
pyyaml = "==5.3"
redbaron = "==0.9.2"
typer = "==0.0.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "pip", path = "requirements.txt"}
to = {format = "poetry", path = "pyproject.toml"}
